yaml/os-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: os-svc-1

spec:
  selector:
    app: os-dep-1

  ports:
    - port: 4000
      targetPort: codeserver
      protocol: TCP
      name: code
    - port: 80
      targetPort: http
      protocol: TCP
      name: nginx
  type: NodePort
