yaml/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
  labels:
      app: test
spec:
    containers:
      - name: test
        image: web:latest
        imagePullPolicy: IfNotPresent
        ports:
          - name: web
            containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: test

spec:
  selector:
    app: test

  ports:
    - port: 3000
      targetPort: web
      protocol: TCP
      name: web
  type: NodePort
