yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: os-ingress

spec:
  rules:
    - http:
        paths:
          - path: /osenv/1
            pathType: Prefix
            backend:
              service:
                name:  os-svc-1
                port:
                  number: 80
          - path: /osenv/2
            pathType: Prefix
            backend:
              service:
                name:  os-svc-2
                port:
                  number: 80
